# T3tr1s

./: README.md  package-lock.json  package.json
backend/node/microservices/auth/: .gitignore  package-lock.json  package.json  tsconfig.json
backend/node/microservices/auth/src/: app.ts
backend/node/microservices/auth/src/broker/: consumer.ts
backend/node/microservices/auth/src/common/: types.ts
backend/node/microservices/auth/src/controllers/: auth.ts
backend/node/microservices/auth/src/models/: user.ts
backend/node/microservices/auth/src/routes/: auth.ts
backend/node/microservices/auth/src/services/: auth.ts
backend/node/microservices/game/: .gitignore  package-lock.json  package.json
backend/node/microservices/game/src/: app.ts
backend/node/microservices/game/src/broker/: consumer.ts  producer.ts
backend/node/microservices/game/src/common/: constants.ts  types.ts
backend/node/microservices/game/src/controllers/: game.ts
backend/node/microservices/game/src/middlewares/: is-auth.ts
backend/node/microservices/game/src/models/: game.ts  piece.ts
backend/node/microservices/game/src/routes/: game.ts
backend/node/microservices/game/src/services/: game.ts
backend/rust/: .gitignore  Cargo.toml  README.md
backend/rust/api/: Cargo.toml
backend/rust/api/src/: main.rs
backend/rust/api/src/models/: models.rs
backend/rust/docker/: Dockerfile  docker-compose.yml
src/: App.vue  main.js
src/common/: constants.js  functions.js
src/components/: CounterDisplay.vue  GameBoard.vue  GameBoardView.vue  NextPieceDisplay.vue
src/router/: routes.js
(+1 files in other folders)
