[package]
name = "Tetris_Backend_Rust_Postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.11" }
rocket_contrib = {version = "0.4.10", default-features = false, features = ["json"]}
serde_json = {version = "1.0.97"}